# AIsChat-Client

./: .gitignore  README.md  aischat-android-key.jks  icon.psd  package.json
frontend/: index.html
src/: Cargo.toml  tauri.conf.json
src-tauri/: tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs
src/icons/: icon.icns
src/src/: lib.rs  main.rs
