[package]
name = "aischat-client"
version = "0.0.0"
description = "AIsChat Client app build with tauri."
authors = ["Frank Steven"]
license = "MIT"
edition = "2024"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
