[package]
name = "aischat-client"
version = "0.0.1"
description = "AIsChat Client app build with tauri."
authors = ["Frank Steven"]
license = "MIT"
edition = "2024"

[lib]
name = "aischat_client_lib"
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "aischat-client"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
